(Add) => show case Angular Function

--- a/QueseZen/src/app/app-base/login/login.component.html
+++ b/QueseZen/src/app/app-base/login/login.component.html
@@ -1,11 +1,14 @@
 <div class="login">
   <div class="login-background">
-    
+    <div style="text-align: right">
+      <button class="btn btn-primary" (click)="btnToggleLoginClick()">{{btnToggleLoginLabel}}</button>
+    </div>
     <div class="login-container">
       <div>
         <div class="title">Logo <span class="title2"> Q Zen</span></div>
       </div>
-      <form (ngSubmit)="login()" class="form-container">
+
+      <form *ngIf="toggleLoginControl == 0" (ngSubmit)="login()" class="form-container">
         <mat-form-field class="text-box">
           <mat-label>Username</mat-label>
           <div class="d-flex justify-content-between">
@@ -22,6 +25,24 @@
         </mat-form-field>
         <p class="mt-4 float-right">
           <button mat-button type="submit" class="login-button">Login</button>
+        </p>
+      </form>
+
+      <form *ngIf="toggleLoginControl == 1" [formGroup]="formGroup" class="form-container">
+        <mat-form-field class="text-box">
+          <mat-label>Username</mat-label>
+          <div class="d-flex justify-content-between">
+            <input matInput type="text" placeholder="Username" formControlName="USERNAME" required autocomplete="off">
+          </div>
+        </mat-form-field>
+        <mat-form-field class="text-box">
+          <mat-label>Password</mat-label>
+          <div class="d-flex justify-content-between">
+            <input matInput type="password" placeholder="Password" formControlName="PASSWORD" required>
+          </div>
+        </mat-form-field>
+        <p class="mt-4 float-right">
+          <button mat-button type="submit" class="login-button-1" (click)="btnLoginClick()">Login</button>
         </p>
       </form>
     </div>
