(Add) => Event Input,Output for Training

--- a/QueseZen/src/app/app-modules/branch-management/component/main-component/main-component.component.html
+++ b/QueseZen/src/app/app-modules/branch-management/component/main-component/main-component.component.html
@@ -1,4 +1,8 @@
 <div class="container-home">
   <app-switcher></app-switcher>
 </div>
-<div style="text-align:right">branch-management</div>
+<div style="text-align:right">
+  branch-management
+  <app-bm-search [testInput]="testInput" (testOutputClick)="resiveOutputEvent($event)">
+  </app-bm-search>
+</div>
