(Update) => chang interface Name to UPPERNAME
Add component

--- a/QueseZen/src/app/app-modules/homepage/homepage.component.html
+++ b/QueseZen/src/app/app-modules/homepage/homepage.component.html
@@ -1,12 +1,15 @@
-<div class="container-home">
+<div class="container-left">
   <app-switcher (routerLink)="routerLinkClick($event)"></app-switcher>
 </div>
-<div style="text-align:right">
+<div class="container-right">
   <div *ngIf="activeMenuUrl == null">HomePage</div>
   <div *ngIf="isShowMenu(menuConfig.EntityConfigurations)">
     <app-entity-configurations-main></app-entity-configurations-main>
   </div>
   <div *ngIf="isShowMenu(menuConfig.BranchManagement)">
     <app-branch-management-main></app-branch-management-main>
+  </div>
+  <div *ngIf="isShowMenu(menuConfig.QueueDashboard)">
+    <app-queue-dashboard-main></app-queue-dashboard-main>
   </div>
 </div>
