(Update) => update Dashboard

--- a/QueseZen/src/app/app-modules/queue-dashboard/component/onservice-queue-list/onservice-queue-list.component.html
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/onservice-queue-list/onservice-queue-list.component.html
@@ -1,21 +1,27 @@
-<p>
-  onservice-queue-list works!
-</p>
-<!--
-<table mat-table [dataSource]="dataSource"  class="mat-elevation-z8">
-
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> = ช่องบริการ </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="name">
+<!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="QUEUE_NUMBER">
     <th mat-header-cell *matHeaderCellDef> หมายเลขคิว </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.QUEUE_NUMBER}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="SERVICE_CHANEL">
+    <th mat-header-cell *matHeaderCellDef> ช่องบริการ </th>
+    <td mat-cell *matCellDef="let element"> {{element.SERVICE_CHANEL}} </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table> -->
 
+<table>
+  <tbody>
+    <tr>
+      <th> หมายเลข </th>
+      <th> ช่องบริการ </th>
+    </tr>
+    <tr *ngFor="let item of dataSource">
+      <td>{{item.QUEUE_NUMBER}}</td>
+      <td>{{item.SERVICE_CHANEL}}</td>
+    </tr>
+  </tbody>
+</table>
