--- a/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.html
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <div class="container">
+  <div class="title-container">
     <div class="row">
       <div class="col-sm">
         Logo Queue Zen
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="onservcie-container">
     <div class="row">
       <div class="col-sm">
         <app-onservice-queue-list></app-onservice-queue-list>
@@ -23,11 +23,12 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="priority-container">
     <div class="row">
       <div class="col-sm">
-        Online Booking Reservation
+        <app-priority-queue-list></app-priority-queue-list>
       </div>
     </div>
   </div>
 </div>
+
