--- a/QueseZen/src/app/app-modules/queue-dashboard/component/priority-queue-item/priority-queue-item.component.html
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/priority-queue-item/priority-queue-item.component.html
@@ -1,3 +1,15 @@
-<p>
-  priority-queue-item works!
-</p>
+<div>
+  <div class="main-container">
+    <div class="row">
+      <div class="col"><b>{{initParameter.QUEUE_NO}}</b></div>
+    </div>
+    <div class="row">
+      <div class="col">{{initParameter.QUEUE_INDEX}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">{{initParameter.QUEUE_TIME}}
+      </div>
+    </div>
+  </div>
+</div>
