--- a/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.scss
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.scss
@@ -1,6 +1,18 @@
-:host{
-  .main-container{
+:host {
+  .main-container {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+  }
+  .title-container {
+    width: 100%;
+    height: 10%;
+  }
+  .onservcie-container {
+    width: 100%;
+    height: 70%;
+  }
+  .priority-container {
+    width: 100%;
+    height: 20%;
   }
 }
