--- a/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.html
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.html
@@ -2,19 +2,18 @@
   <div class="title-container">
     <div class="row">
       <div class="col-sm">
-        Logo Queue Zen
-      </div>
+        Logo Queue Zen </div>
       <div class="col-sm">
         <b>Queue Date:</b> {{queueDate}}<b> Time:</b>{{now | date:'HH:mm:ss'}}
 
       </div>
       <div class="col-sm">
-        Branch Name: Studio 7-The Mall-Bangkae
+        Branch Name: {{branchName}}
       </div>
     </div>
   </div>
   <div class="onservcie-container">
-    <div class="row">
+    <div class="row h-100">
       <div class="col-sm">
         <app-onservice-queue-list></app-onservice-queue-list>
       </div>
@@ -31,4 +30,3 @@
     </div>
   </div>
 </div>
-
