(Update) => Update Css Demo Style

--- a/QueseZen/src/app/app-modules/queue-dashboard/component/priority-queue-item/priority-queue-item.component.html
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/priority-queue-item/priority-queue-item.component.html
@@ -1,14 +1,14 @@
 <div>
   <div class="main-container">
     <div class="row">
-      <div class="col"><b>{{initParameter.QUEUE_NO}}</b></div>
+      <div class="col font-size-queue-no"><b>{{initParameter.QUEUE_NO}}</b></div>
     </div>
     <div class="row">
-      <div class="col">{{initParameter.QUEUE_INDEX}}
+      <div class="col font-size-queue-index">{{initParameter.QUEUE_INDEX}}
       </div>
     </div>
     <div class="row">
-      <div class="col">{{initParameter.QUEUE_TIME}}
+      <div class="col font-size-queue-time">{{initParameter.QUEUE_TIME}}
       </div>
     </div>
   </div>
