--- a/QueseZen/src/app/app-modules/queue-dashboard/component/priority-queue-item/priority-queue-item.component.scss
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/priority-queue-item/priority-queue-item.component.scss
@@ -2,4 +2,14 @@
   .main-container {
     text-align: center;
   }
+  .font-size-queue-no {
+    font-size: 14pt;
+  }
+  .font-size-queue-index {
+    font-size: 11pt;
+    margin-top: 5px;
+  }
+  .font-size-queue-time {
+    font-size: 11pt;
+  }
 }
