--- a/QueseZen/src/app/app-modules/queue-dashboard/component/onservice-queue-list/onservice-queue-list.component.html
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/onservice-queue-list/onservice-queue-list.component.html
@@ -13,12 +13,14 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table> -->
 
-<table class="h-100">
-  <tbody>
+<table class="h-100 table table-bordered font-size-queue">
+  <thead>
     <tr [style.height.%]=priorityQueueItemHeight>
-      <th> หมายเลข </th>
+      <th> หมายเลขคิว </th>
       <th> ช่องบริการ </th>
     </tr>
+  </thead>
+  <tbody>
     <tr *ngFor="let item of dataSource" [style.height.%]=priorityQueueItemHeight>
       <td>{{item.QUEUE_NUMBER}}</td>
       <td>{{item.SERVICE_CHANEL}}</td>
