--- a/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.scss
+++ b/QueseZen/src/app/app-modules/queue-dashboard/component/queue-dashboard-main/queue-dashboard-main.component.scss
@@ -1,19 +1,41 @@
 :host {
+  body {
+    font-size: 10px;
+  }
   .main-container {
     width: 100%;
-    height: 100vh;
     padding: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
   .title-container {
     width: 100%;
-    height: 10%;
+    height: 8%;
+    padding-bottom: 20px;
+
+    .align-middle {
+      margin-bottom: 0;
+      content: "";
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;
+    }
   }
+
   .onservcie-container {
     width: 100%;
-    height: 70%;
+    height: 75%;
+    padding-bottom: 20px;
+
+    .background-bander{
+      background-color: gainsboro;
+    }
   }
   .priority-container {
     width: 100%;
-    height: 20%;
+    height: 17%;
   }
 }
